--- a/src/components/CustomPanel/styles.scss
+++ b/src/components/CustomPanel/styles.scss
@@ -199,4 +199,23 @@
   p {
     font-size: 1.125rem;
   }
+
+  h2 {
+    font-family: "ABCSerif", serif;
+    text-align: center;
+    padding-bottom: 1rem;
+    font-size: 2.25rem;
+    margin-bottom: 2.25rem;
+    text-transform: unset;
+    color: black;
+
+    &::before {
+    content: '';
+    display: block;
+    margin: 5rem auto 1.5rem;
+    width: 7.5rem;
+    height: 0.125rem;
+    background-color: rgba(179,179,179,0.7);
+    }
+  }
 }
