--- a/src/components/CustomPanel/styles.scss
+++ b/src/components/CustomPanel/styles.scss
@@ -1,3 +1,5 @@
+$fade-height: 100vh;
+
 .base {
   box-sizing: border-box;
 
@@ -68,8 +70,7 @@
 
 .light {
   &::before {
-    $color: rgba(250, 250, 250, 0.95);
-    background-color: $color;
+    background-color: rgba(250, 250, 250, 0.95);
     // border: 1px solid darken($color, 15%);
   }
 
@@ -120,55 +121,56 @@
 
 .scrollout {
   &::before {
-    $color: rgba(250, 250, 250, 0);
-    background-color: $color;
+    background-color: rgba(250, 250, 250, 0);
   }
 
-  margin-bottom: 0;
-  margin-top: 0;
+  margin-top: -($fade-height * 0.8);
+  margin-bottom: -($fade-height * 0.8);
+  padding-top: $fade-height;
+  padding-bottom: $fade-height;
 
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
   background-image: linear-gradient(
       to bottom,
-      hsla(0, 0%, 100%, 0) 0vh,
-      hsla(0, 0%, 100%, 0.013) 8.1vh,
-      hsla(0, 0%, 100%, 0.049) 15.5vh,
-      hsla(0, 0%, 100%, 0.104) 22.5vh,
-      hsla(0, 0%, 100%, 0.175) 29vh,
-      hsla(0, 0%, 100%, 0.259) 35.3vh,
-      hsla(0, 0%, 100%, 0.352) 41.2vh,
-      hsla(0, 0%, 100%, 0.45) 47.1vh,
-      hsla(0, 0%, 100%, 0.55) 52.9vh,
-      hsla(0, 0%, 100%, 0.648) 58.8vh,
-      hsla(0, 0%, 100%, 0.741) 64.7vh,
-      hsla(0, 0%, 100%, 0.825) 71vh,
-      hsla(0, 0%, 100%, 0.896) 77.5vh,
-      hsla(0, 0%, 100%, 0.951) 84.5vh,
-      hsla(0, 0%, 100%, 0.987) 91.9vh,
-      hsl(0, 0%, 100%) 100vh,
-      rgba(255, 255, 255, 1) 110vh,
+      hsla(0, 0%, 100%, 0) $fade-height * 0,
+      hsla(0, 0%, 100%, 0.013) $fade-height * 0.081,
+      hsla(0, 0%, 100%, 0.049) $fade-height * 0.155,
+      hsla(0, 0%, 100%, 0.104) $fade-height * 0.225,
+      hsla(0, 0%, 100%, 0.175) $fade-height * 0.29,
+      hsla(0, 0%, 100%, 0.259) $fade-height * 0.353,
+      hsla(0, 0%, 100%, 0.352) $fade-height * 0.412,
+      hsla(0, 0%, 100%, 0.45) $fade-height * 0.471,
+      hsla(0, 0%, 100%, 0.55) $fade-height * 0.529,
+      hsla(0, 0%, 100%, 0.648) $fade-height * 0.588,
+      hsla(0, 0%, 100%, 0.741) $fade-height * 0.647,
+      hsla(0, 0%, 100%, 0.825) $fade-height * 0.71,
+      hsla(0, 0%, 100%, 0.896) $fade-height * 0.775,
+      hsla(0, 0%, 100%, 0.951) $fade-height * 0.845,
+      hsla(0, 0%, 100%, 0.987) $fade-height * 0.919,
+      hsl(0, 0%, 100%) $fade-height * 1,
+      rgba(255, 255, 255, 1) $fade-height * 1.1,
       rgba(255, 255, 255, 0) 100%
     ),
     linear-gradient(
       to top,
-      hsla(0, 0%, 100%, 0) 0vh,
-      hsla(0, 0%, 100%, 0.013) 8.1vh,
-      hsla(0, 0%, 100%, 0.049) 15.5vh,
-      hsla(0, 0%, 100%, 0.104) 22.5vh,
-      hsla(0, 0%, 100%, 0.175) 29vh,
-      hsla(0, 0%, 100%, 0.259) 35.3vh,
-      hsla(0, 0%, 100%, 0.352) 41.2vh,
-      hsla(0, 0%, 100%, 0.45) 47.1vh,
-      hsla(0, 0%, 100%, 0.55) 52.9vh,
-      hsla(0, 0%, 100%, 0.648) 58.8vh,
-      hsla(0, 0%, 100%, 0.741) 64.7vh,
-      hsla(0, 0%, 100%, 0.825) 71vh,
-      hsla(0, 0%, 100%, 0.896) 77.5vh,
-      hsla(0, 0%, 100%, 0.951) 84.5vh,
-      hsla(0, 0%, 100%, 0.987) 91.9vh,
-      hsl(0, 0%, 100%) 100vh,
-      rgba(255, 255, 255, 1) 110vh,
+      hsla(0, 0%, 100%, 0) $fade-height * 0,
+      hsla(0, 0%, 100%, 0.013) $fade-height * 0.081,
+      hsla(0, 0%, 100%, 0.049) $fade-height * 0.155,
+      hsla(0, 0%, 100%, 0.104) $fade-height * 0.225,
+      hsla(0, 0%, 100%, 0.175) $fade-height * 0.29,
+      hsla(0, 0%, 100%, 0.259) $fade-height * 0.353,
+      hsla(0, 0%, 100%, 0.352) $fade-height * 0.412,
+      hsla(0, 0%, 100%, 0.45) $fade-height * 0.471,
+      hsla(0, 0%, 100%, 0.55) $fade-height * 0.529,
+      hsla(0, 0%, 100%, 0.648) $fade-height * 0.588,
+      hsla(0, 0%, 100%, 0.741) $fade-height * 0.647,
+      hsla(0, 0%, 100%, 0.825) $fade-height * 0.71,
+      hsla(0, 0%, 100%, 0.896) $fade-height * 0.775,
+      hsla(0, 0%, 100%, 0.951) $fade-height * 0.845,
+      hsla(0, 0%, 100%, 0.987) $fade-height * 0.919,
+      hsl(0, 0%, 100%) $fade-height * 1,
+      rgba(255, 255, 255, 1) $fade-height * 1.1,
       rgba(255, 255, 255, 0) 100%
     );
 
@@ -193,9 +195,6 @@
     }
   }
 
-  // background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,1));
-  padding-top: 100vh;
-  padding-bottom: 100vh;
   p {
     font-size: 1.125rem;
   }
@@ -218,12 +217,4 @@
       background-color: rgba(179, 179, 179, 0.7);
     }
   }
-}
-
-.is-scrolling {
-  background-color: blue;
-}
-
-.is-not-scrolling {
-  background-color: red;
 }
