--- a/src/components/CustomPanel/styles.scss
+++ b/src/components/CustomPanel/styles.scss
@@ -1,6 +1,9 @@
 $fade-height: 100vh;
 
 .base {
+  // Fix for panels going behind the stage
+  -webkit-transform: translate3d(0,0,0);
+
   box-sizing: border-box;
 
   padding-top: 2.25rem;
