--- a/src/components/BackgroundStage/styles.scss
+++ b/src/components/BackgroundStage/styles.scss
@@ -1,10 +1,18 @@
 .root {
   min-height: 100%;
   // background-color: #E3F5F5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .svg-container {
-  max-width: 400px;
+  width: 100%;
+  
+  svg {
+    max-height: 100vh;
+  }
 }
 
 .preload {
