--- a/src/components/BackgroundStage/styles.scss
+++ b/src/components/BackgroundStage/styles.scss
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+  background-image: url(https://www.abc.net.au/res/sites/news-projects/interactive-scrollout/master/background-cover.jpg);
+  background-size: cover;
 }
 
 .svg-container {
