--- a/src/components/BackgroundStage/styles.scss
+++ b/src/components/BackgroundStage/styles.scss
@@ -15,9 +15,9 @@
   svg {
     height: 100vh;
 
-    // > g {
-    //   transform: translateX(-20vw);
-    // }
+    > g {
+      transform: translateX(-20vw);
+    }
   }
 }
 
