--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -20,7 +20,14 @@
   }
 }
 
-.worm {
-  width: 240px;
-  height: auto;
+// .worm {
+//   width: 240px;
+//   height: auto;
+// }
+
+:global {
+  
+  body {
+    background-color: #e3f5f5 !important;
+  }
 }
