--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -12,7 +12,8 @@
 
   h1 {
     margin-bottom: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif !important;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Helvetica, Arial, sans-serif !important;
     font-size: 24px !important;
     font-weight: normal !important;
     line-height: normal !important;
@@ -26,8 +27,7 @@
 // }
 
 :global {
-  
   body {
-    background-color: #e3f5f5 !important;
+    background-color: #e0ffff !important;
   }
 }
