--- a/src/components/CustomPanel/styles.scss
+++ b/src/components/CustomPanel/styles.scss
@@ -9,8 +9,8 @@ $fade-height: 50vh;
   padding-top: 2.25rem;
   padding-bottom: 2.25rem;
 
-  margin-bottom: 49vh;
-  margin-top: 49vh;
+  margin-bottom: 45vh;
+  margin-top: 45vh;
   margin-left: auto;
   margin-right: auto;
 
@@ -24,7 +24,7 @@ $fade-height: 50vh;
   }
 
   &:last-of-type {
-    margin-bottom: 100vh;
+    margin-bottom: 90vh;
   }
 
   &::before {
@@ -70,11 +70,14 @@ $fade-height: 50vh;
     }
   }
 
+  ul {
+    font-size: 1.375rem;
+  }
+
   li {
     line-height: 1.666666667;
     margin-bottom: 0.5rem;
     text-align: left;
-    font-size: 1.125rem;
   }
 
   ul {
@@ -92,11 +95,20 @@ $fade-height: 50vh;
     background-position: 0 0.65em;
     background-repeat: no-repeat;
   }
+
+  blockquote {
+    p {
+      color: #315768;
+      padding-left: 8.33333%;
+      padding-right: 8.33333%;
+      margin-bottom: 2rem !important;
+    }
+  }
 }
 
 .light {
   &::before {
-    background-color: rgba(250, 250, 250, 0.95);
+    background-color: rgba(250, 250, 250, 0.7);
     // border: 1px solid darken($color, 15%);
   }
 
@@ -157,52 +169,52 @@ $fade-height: 50vh;
   padding-bottom: $fade-height;
 
   width: 100%;
-  background-color: hsla(180, 47%, 93%, 0);
+  background-color: hsla(180, 100%, 94%, 0);
   background-image: linear-gradient(
       to bottom,
-      hsla(180, 47%, 93%, 0) $fade-height * 0,
-      hsla(180, 47%, 93%, 0.013) $fade-height * 0.081,
-      hsla(180, 47%, 93%, 0.049) $fade-height * 0.155,
-      hsla(180, 47%, 93%, 0.104) $fade-height * 0.225,
-      hsla(180, 47%, 93%, 0.175) $fade-height * 0.29,
-      hsla(180, 47%, 93%, 0.259) $fade-height * 0.353,
-      hsla(180, 47%, 93%, 0.352) $fade-height * 0.412,
-      hsla(180, 47%, 93%, 0.45) $fade-height * 0.471,
-      hsla(180, 47%, 93%, 0.55) $fade-height * 0.529,
-      hsla(180, 47%, 93%, 0.648) $fade-height * 0.588,
-      hsla(180, 47%, 93%, 0.741) $fade-height * 0.647,
-      hsla(180, 47%, 93%, 0.825) $fade-height * 0.71,
-      hsla(180, 47%, 93%, 0.896) $fade-height * 0.775,
-      hsla(180, 47%, 93%, 0.951) $fade-height * 0.845,
-      hsla(180, 47%, 93%, 0.987) $fade-height * 0.919,
-      hsl(180, 47%, 93%) $fade-height * 1,
-      hsla(180, 47%, 93%, 1) $fade-height * 1.1,
-      hsla(180, 47%, 93%, 0) 100%
+      hsla(180, 100%, 94%, 0) $fade-height * 0,
+      hsla(180, 100%, 94%, 0.013) $fade-height * 0.081,
+      hsla(180, 100%, 94%, 0.049) $fade-height * 0.155,
+      hsla(180, 100%, 94%, 0.104) $fade-height * 0.225,
+      hsla(180, 100%, 94%, 0.175) $fade-height * 0.29,
+      hsla(180, 100%, 94%, 0.259) $fade-height * 0.353,
+      hsla(180, 100%, 94%, 0.352) $fade-height * 0.412,
+      hsla(180, 100%, 94%, 0.45) $fade-height * 0.471,
+      hsla(180, 100%, 94%, 0.55) $fade-height * 0.529,
+      hsla(180, 100%, 94%, 0.648) $fade-height * 0.588,
+      hsla(180, 100%, 94%, 0.741) $fade-height * 0.647,
+      hsla(180, 100%, 94%, 0.825) $fade-height * 0.71,
+      hsla(180, 100%, 94%, 0.896) $fade-height * 0.775,
+      hsla(180, 100%, 94%, 0.951) $fade-height * 0.845,
+      hsla(180, 100%, 94%, 0.987) $fade-height * 0.919,
+      hsl(180, 100%, 94%) $fade-height * 1,
+      hsla(180, 100%, 94%, 1) $fade-height * 1.1,
+      hsla(180, 100%, 94%, 0) 100%
     ),
     linear-gradient(
       to top,
-      hsla(180, 47%, 93%, 0) $fade-height * 0,
-      hsla(180, 47%, 93%, 0.013) $fade-height * 0.081,
-      hsla(180, 47%, 93%, 0.049) $fade-height * 0.155,
-      hsla(180, 47%, 93%, 0.104) $fade-height * 0.225,
-      hsla(180, 47%, 93%, 0.175) $fade-height * 0.29,
-      hsla(180, 47%, 93%, 0.259) $fade-height * 0.353,
-      hsla(180, 47%, 93%, 0.352) $fade-height * 0.412,
-      hsla(180, 47%, 93%, 0.45) $fade-height * 0.471,
-      hsla(180, 47%, 93%, 0.55) $fade-height * 0.529,
-      hsla(180, 47%, 93%, 0.648) $fade-height * 0.588,
-      hsla(180, 47%, 93%, 0.741) $fade-height * 0.647,
-      hsla(180, 47%, 93%, 0.825) $fade-height * 0.71,
-      hsla(180, 47%, 93%, 0.896) $fade-height * 0.775,
-      hsla(180, 47%, 93%, 0.951) $fade-height * 0.845,
-      hsla(180, 47%, 93%, 0.987) $fade-height * 0.919,
-      hsl(180, 47%, 93%) $fade-height * 1,
-      hsla(180, 47%, 93%, 1) $fade-height * 1.1,
-      hsla(180, 47%, 93%, 0) 100%
+      hsla(180, 100%, 94%, 0) $fade-height * 0,
+      hsla(180, 100%, 94%, 0.013) $fade-height * 0.081,
+      hsla(180, 100%, 94%, 0.049) $fade-height * 0.155,
+      hsla(180, 100%, 94%, 0.104) $fade-height * 0.225,
+      hsla(180, 100%, 94%, 0.175) $fade-height * 0.29,
+      hsla(180, 100%, 94%, 0.259) $fade-height * 0.353,
+      hsla(180, 100%, 94%, 0.352) $fade-height * 0.412,
+      hsla(180, 100%, 94%, 0.45) $fade-height * 0.471,
+      hsla(180, 100%, 94%, 0.55) $fade-height * 0.529,
+      hsla(180, 100%, 94%, 0.648) $fade-height * 0.588,
+      hsla(180, 100%, 94%, 0.741) $fade-height * 0.647,
+      hsla(180, 100%, 94%, 0.825) $fade-height * 0.71,
+      hsla(180, 100%, 94%, 0.896) $fade-height * 0.775,
+      hsla(180, 100%, 94%, 0.951) $fade-height * 0.845,
+      hsla(180, 100%, 94%, 0.987) $fade-height * 0.919,
+      hsl(180, 100%, 94%) $fade-height * 1,
+      hsla(180, 100%, 94%, 1) $fade-height * 1.1,
+      hsla(180, 100%, 94%, 0) 100%
     );
 
   .inner {
-    background-color: #e3f5f5;
+    background-color: #e0ffffff;
     padding-top: 4em;
     padding-bottom: 4em;
   }
@@ -215,6 +227,10 @@ $fade-height: 50vh;
   p {
     font-size: 1.125rem;
     margin-bottom: 2.25rem;
+  }
+
+  ul {
+    font-size: 1.125rem;
   }
 
   h2 {
@@ -236,11 +252,27 @@ $fade-height: 50vh;
     }
   }
 
+  h3 {
+    font-family: "ABCSans", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    color: black;
+    line-height: 1.294117647;
+    text-transform: none;
+    margin-bottom: 2.25rem;
+    margin-top: 0;
+    font-size: 1.375rem;
+    padding-left: 0.875rem;
+    padding-right: 0.875rem;
+    width: 66.66667%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
   li {
     line-height: 1.666666667;
     margin-bottom: 0.5rem;
     text-align: left;
-    font-size: 1.125rem;
   }
 
   ul {
@@ -270,11 +302,20 @@ $fade-height: 50vh;
       ul {
         width: 100%;
       }
+
+      p,
+      ul {
+        font-size: 1.125rem;
+      }
+
+      h3 {
+        width: 100%;
+      }
     }
   }
 }
 
-.scrollout-top {
+.scrollout-bottom {
   margin-top: 0 !important;
   padding-top: 0;
 
@@ -283,9 +324,13 @@ $fade-height: 50vh;
   }
 }
 
-.scrollout-bottom {
+.scrollout-top {
   margin-bottom: 0 !important;
   padding-bottom: 0;
+
+  p:last-child {
+    padding-bottom: 2.25rem;
+  }
 
   .inner {
     padding-bottom: 0;
@@ -295,6 +340,14 @@ $fade-height: 50vh;
     }
   }
 }
+
+// Let's make a hidden panel that can trigger a mark
+// but won't take up any space on the page
+// TODO: We're going to have to find a better way
+// .hidden-panel {
+//   visibility: hidden;
+//   height: 0;
+// }
 
 // This is to prevent extra paragraph spacing
 :global {
