--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -44,11 +44,12 @@
   }
 
   .Header-media:after {
+    position: absolute;
     // height: 8.25rem;
     background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0) 0%,
-      #e0ffff 100%
+      rgba(224, 255, 255, 0),
+      rgba(224, 255, 255, 100)
     ) !important;
   }
 }
