--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -3,9 +3,9 @@
     background-color: #e0ffff !important;
   }
 
-  div[data-interactive-scrollout-root] > div > div.sgMpdhCf {
-    position: fixed;
-  }
+  // div[data-interactive-scrollout-root] > div > div.sgMpdhCf {
+  //   position: fixed;
+  // }
 
   .Header-content h1 {
     display: none;
