--- a/src/components/BackgroundStage/styles.scss
+++ b/src/components/BackgroundStage/styles.scss
@@ -17,7 +17,8 @@
 
     @media only screen and (min-width: 1023px) {
       > g {
-        transform: translate3d(-20vw, 0, 0);
+        transform: translateX(-20vw);
+        
       }
     }
   }
